2010-11-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Tests: consistently use "|| Exit 1" after ". ./defs".
	* tests/autohdr.test: Use `. ./defs || Exit 1', not bare
	`. ./defs', for consistency with other tests.
	* tests/autohdr2.test: Likewise.
	* tests/autohdr3.test: Likewise.
	* tests/autohdr4.test: Likewise.
	* tests/cond23.test: Likewise.
	* tests/cond24.test: Likewise.
	* tests/cond25.test: Likewise.
	* tests/cond26.test: Likewise.
	* tests/cond27.test: Likewise.
	* tests/cond28.test: Likewise.
	* tests/cond29.test: Likewise.
	* tests/cond30.test: Likewise.
	* tests/cond31.test: Likewise.
	* tests/cond32.test: Likewise.
	* tests/cond33.test: Likewise.
	* tests/cond34.test: Likewise.
	* tests/cond35.test: Likewise.
	* tests/cond36.test: Likewise.
	* tests/cond37.test: Likewise.
	* tests/cond38.test: Likewise.
	* tests/cond39.test: Likewise.
	* tests/cond40.test: Likewise.
	* tests/cond41.test: Likewise.
	* tests/cond42.test: Likewise.
	* tests/cond43.test: Likewise.
	* tests/cond44.test: Likewise.
	* tests/cond45.test: Likewise.
	* tests/dollarvar.test: Likewise.
	* tests/dollarvar2.test: Likewise.
	* tests/hfs.test: Likewise.
	* tests/libobj14.test: Likewise.
	* tests/percent.test: Likewise.
	* tests/percent2.test: Likewise.
	* tests/phony.test: Likewise.
	* tests/silent.test: Likewise.
	* tests/silent2.test: Likewise.
	* tests/silent3.test: Likewise.
	* tests/silent4.test: Likewise.
	* tests/silent5.test: Likewise.
	* tests/silent6.test: Likewise.
	* tests/silent7.test: Likewise.
	* tests/silent9.test: Likewise.
	* tests/silentcxx.test: Likewise.
	* tests/silentf77.test: Likewise.
	* tests/silentf90.test: Likewise.
	* tests/silentlex.test: Likewise.
	* tests/silentyacc.test: Likewise.

	Avoid useless cleaning in some `silent*.test' tests.
	* tests/silentf77.test: Removed useless calls to "make clean"
	and "make maintainer-clean".
	* tests/silentf90.test: Likewise.
	* tests/silent3.test: Removed useless call to "make distclean".