@@ -1,3 +1,14 @@
+2010-11-25  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	Separate checks on target overriding into multiple test scripts.
+	* tests/overrid.test: Deleted, its contents separated into ...
+	* tests/override-suggest-local.test: ... this new test ...
+	* tests/override-html.test: ... and this new test ...
+	* tests/override-conditional-1.test: ... and this new test ...
+	* tests/override-conditional-2.test: ... and this new test (still
+	xfailing).
+	* tests/Makefile.am (TESTS, XFAIL_TESTS): Updated.
+
 2010-11-21  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	Tests: consistently use "|| Exit 1" after ". ./defs".
